add_executable(exhaustive_search exhaustive_search.cc)
add_executable(koch_curve koch_curve.cc)
add_executable(merge_sort merge_sort.cc)
add_executable(partition partition.cc)
add_executable(quick_sort quick_sort.cc)
add_executable(combination combination.cc)
add_executable(rooted_trees rooted_trees.cc)
add_executable(rooted_trees2 rooted_trees2.cc)
add_executable(binary_tree binary_tree.cc)
add_executable(tree_walk tree_walk.cc)
add_executable(binary_tree_insert binary_tree_insert.cc)
add_executable(run_length run_length.cc)
add_executable(forward_linked_list forward_linked_list.cc)
add_executable(simple_programming_language simple_programming_language.cc)
add_executable(parse_polish_notation parse_polish_notation.cc)